Videoclub - Horizontal scrolling in the structure of the season - pre-commit 1 (issue #9445)

--- a/server/adm/css/style.css
+++ b/server/adm/css/style.css
@@ -4285,6 +4285,7 @@ table.dataTable thead th {
 #files_container .dataTables_wrapper > .row-fluid > .span6 {
     float: left;
     min-width: 50%;
+    position: relative;
 }
 
 #files_container .dataTables_wrapper .dataTables_filter label{
